# oglTemplate

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Readme.md  shell-msys2.bat  shell-msys2win.bat  start-clion-msys2.bat
Artwork/Sprites/: .gitignore
CMake/: CompilerWarnings.cmake  Doxygen.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  ccache-launcher.bat  helpers.cmake  setup.cmake  versioning.cmake
benchmark/: CMakeLists.txt
benchmark/Playground/: BM_FloatingPoint.cpp  BM_Strings.cpp  CMakeLists.txt
benchmark/benchmark/: CMakeLists.txt
benchmark/benchmark/src/: main.cpp
benchmark/benchmark/src/win/: GrCoreBench.rc.in  SpeedIOBench.rc.in
config/: CompilerWarnings.cmake  WelcomeShell.txt  config.bat  func-header-cpp.txt  header-cpp.txt  uncrustify-cpp-doc.cfg  uncrustify-cpp.cfg  uncrustify.cfg
doc/: CMakeLists.txt  DevelNotes.md  TheDatabaseThingsBook.md  TheDatabaseThingsBook.txt
grcore/: CMakeLists.txt
grcore/doc/: CMakeLists.txt  Resources.md
grcore/include/grcore/: Common.h  DataAcquisition.h  FileSystem.h  GrCore.h  Instrumentation.h  Logging.h  Math.h  Resource.h  Telemetry.h  grcore.h  instrumentation.h  logging.h  math.h  resource.h  wgl_common.h
grcore/include/grcore/Utility/: Property.h  TcpClient.h  return_type_trait.h
grcore/include/grcore/warning/: FMT_format.h  FMT_format_log.h
grcore/res/: Items.txt
grcore/src/: FileSystem.cpp  Logging.cpp  Math.cpp  Telemetry.cpp  console.h  logging.cpp  math.cpp  resource.cpp  test.cpp
grcore/src/Utilitly/: Property.cpp  TcpClient.cpp
grcore/src/Utility/: Property.cpp
grcore/src/linux/: GrCore.rc.s.Resource.h  GrCore.rc.s.in  Logging.cpp  Resource.cpp  TcpClient.cpp
grcore/src/win/: DllEntry.cpp  GrCore.rc.in  Logging.cpp  Resource.cpp  TcpClient.cpp  console.cpp  dllentry.cpp  resource.cpp  wgl_common.cpp
grcore/tests/: CMakeLists.txt  SimpleTest.cpp
grcore/tests/Utility/: Property.cpp  PropertyTest.cpp
grgraphics/: CMakeLists.txt
grgraphics/include/: Constants.h
grgraphics/include/grgraphics/: Application.h  Camera.h  Constants.h  Debuggable.h  GrGraphics.h  Math.h  Player.h  Setup.h  SimpleApplication.h  grgraphics.h
grgraphics/include/grgraphics/Drawables/: CoordGraph.h  CoordSystem.h  Cursor.cpp  Cursor.h  SpriteOverlay.h  TileMap.h
grgraphics/include/grgraphics/Utility/: Collision.h  Common.h  VectorUtil.h  Velocity.h
grgraphics/include/grgraphics/warning/: FMT_format.h  SFML_Graphics.h
grgraphics/src/: Application.cpp  Camera.cpp  Constants.cpp  Debuggable.cpp  Math.cpp  Player.cpp  Setup.cpp  SimpleApplication.cpp  sfml-test.cpp  test.cpp
grgraphics/src/Drawables/: CoordGraph.cpp  CoordSystem.cpp  Cursor.cpp  SpriteOverlay.cpp  TileMap.cpp
grgraphics/src/Utility/: Collision.cpp  Common.cpp  VectorUtil.cpp  Velocity.cpp
grgraphics/src/win/: GrGraphics.rc.in
playground/: CMakeLists.txt
playground/SFML/: CMakeLists.txt  hello_sfml.cpp
playground/grcore/: CMakeLists.txt  create_HDCwindow.cpp  resources.cpp  sendTcpData.cpp  sendTelemetryData.cpp  statemachine01.cpp  statemachine02.cpp  template.cpp
playground/grgraphics/: CMakeLists.txt  simple_backscroll.cpp  simple_cursor.cpp  simple_graph.cpp  simple_player.cpp  simple_tilemap.cpp  simple_window.cpp
playground/grgraphics/res/: Items.txt  Playground_GrGraphics.rc.in
playground/simple/: C02a_designated_initializers.cpp  CMakeLists.txt  coroutine1.cpp  create_window.cpp  datatypes.cpp  hello.cpp  lifetime_smart.cpp  property.cpp  spdlog.cpp
speedio/: CMakeLists.txt
speedio/include/speedio/: speedio.h
speedio/src/: test.cpp
speedio/src/win/: SpeedIO.rc.in
src/: CMakeLists.txt  main.cpp  precompiled.h
tests/: CMakeLists.txt  SimpleTest.cpp
